[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cell.gd" type="Script" id=1]
[ext_resource path="res://assets/placeholder.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="Cell" type="Area2D"]
position = Vector2( 101.785, 68.8548 )
script = ExtResource( 1 )

[node name="placeholder" type="Sprite" parent="."]
visible = false
position = Vector2( -0.119582, -0.119582 )
scale = Vector2( 0.11672, 0.11672 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="x_o" type="Sprite" parent="."]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_onl_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
